# hexapod-esp32-display

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pi-test-snippet.py  platformio.ini  sdkconfig.defaults
components/config/include/: Config.h
components/display/: CMakeLists.txt  Display.cpp
components/display/include/: Display.h
components/expression/: CMakeLists.txt  ExpressionController.cpp
components/expression/include/: ExpressionController.h  IRenderer.h
components/protocol/: CMakeLists.txt  ProtocolCodec.cpp
components/protocol/include/: Frame.h  ProtocolCodec.h
components/renderer/: CMakeLists.txt  EyeAnim.cpp  EyeRenderer.cpp  StubRenderer.cpp
components/renderer/include/: EyeRaster.h  EyeRenderer.h  StubRenderer.h
components/u8g2/: CMakeLists.txt  u8g2_esp32_hal.c
components/u8g2/include/: u8g2_esp32_hal.h
components/uart_transport/: CMakeLists.txt  UartTransport.cpp
components/uart_transport/include/: UartTransport.h
docs/: commands.md  protocol.md
include/: Config.h
lib/Display/: Display.cpp  Display.h
lib/ExpressionController/: Expression.h  ExpressionController.cpp
lib/ProtocolCodec/: Crc16.h
lib/Renderer/: IRenderer.h  StubRenderer.cpp  StubRenderer.h
lib/UartTransport/: UartTransport.cpp  UartTransport.h
main/: CMakeLists.txt  main.cpp
ros2/face/: CMakeLists.txt  package.xml
ros2/face/config/: face.yaml
ros2/face/launch/: face.launch.py
ros2/face/src/: Sh1122Panel.cpp  face_node.cpp
ros2/hexa_display/: CMakeLists.txt  package.xml
ros2/hexa_display/launch/: face.launch.py
ros2/hexa_display/src/: FaceNames.h  Sh1122Panel.h  face_node.cpp
src/: main.cpp
test/: Makefile
test/sim/: eyesim.cpp
test/test_codec/: test_codec.cpp
test/test_crc/: test_crc.cpp
test/test_eyes/: test_eyes.cpp
test/test_face/: test_face.cpp
